# xeus-cling-cmake-setup

./: CMakeLists.txt  LICENSE.md  README.md  TODO.md  XeusClingSetup.cmake
.github/workflows/: ci.yml
test/: install_all_kernels.sh  install_kernel.sh
test/notebooks/: adder_test.ipynb
test/projects/adder/: CMakeLists.txt
test/projects/adder/include/adder/: adder.hpp  adder2.hpp
test/projects/adder/src/: CMakeLists.txt  adder.cpp  adder2.cpp
